2005-04-30  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Remove CPPFLAGS addition for
	CoreFoundation on MacOS X.
	(gt_INTL_MACOSX): Likewise. Use #include <CoreFoundation/...> syntax.
	It's a special Apple syntax implemented in the C compiler, but since
	<CFString.h> already uses it, all compilers usable on MacOS X must
	support it. In LIBS, use -Wl prefix for -framework option.

2005-05-03  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Also test for NL_LOCALE_NAME macro.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-06  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Don't use a cast from 'char *' to 'int',
	since it's not valid in C++ on 64-bit machines.
	Reported by Mads Martin Joergensen <mmj@suse.de>.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-03-12  Bruno Haible  <bruno@clisp.org>

	* po.m4 (AM_PO_SUBDIRS, AM_POSTPROCESS_PO_MAKEFILE): In the LINGUAS
	file, ignore also comments that don't start in column 0.

2005-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Fix quoting bug. Fixes an endless loop
	of 'aclocal' when a configure.ac contains two invocations of
	AM_GNU_GETTEXT.

2005-03-11  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): CATOBJEXT and INTLOBJS default to empty.
	Reported by Stepan Kasal <kasal@ucw.cz>.

2005-03-07  Bruno Haible  <bruno@clisp.org>

	* po.m4: Add comments.

2005-03-05  Bruno Haible  <bruno@clisp.org>

	* nls.m4: Require autoconf >= 2.50.
	(AM_MKINSTALLDIRS): Use AC_REQUIRE_AUX_FILE conditionally.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (gt_INTL_MACOSX): New macro, extracted from
	AM_INTL_SUBDIR. Set INTL_MACOSX_LIBS instead of INTL_MACOSX_LDFLAGS.
	(AM_GNU_GETTEXT): Invoke it. Add the INTL_MACOSX_LIBS contents to
	LIBINTL and LTLIBINTL.